@@ -1,1 +1,2 @@
-mman-log.txt
+*.log
+test-structure/
