@@ -1,4 +1,4 @@
 [paths]
 active = F:\media\music\active-flac
 archive = F:\media\music\archive
-logname = mman-log.txt
+logname = mman.log
